# marimo-jupyter-scheduler

./: .gitattributes  .gitignore  AGENT.md  LICENSE  README.md  install.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: ehr_data_pull_mo.html  ehr_data_pull_mo.py  output.csv  output.txt  sales_report_mo.py  sample.marimo-schedule.yml
examples/__marimo__/session/: ehr_data_pull_mo.py.json
jupyter-config/: jupyter_server_config.py
jupyter-config/server-config/: marimo-jupyter-scheduler.json
marimo_jupyter_scheduler/: __init__.py  db_health.py  environment.py  executor.py  handlers.py  scheduler.py  task_runner.py  yaml_jobs.py  yaml_watcher.py
src/: api.ts  dashboard.tsx  index.ts
src/components/: DefinitionEditor.tsx  JobsTable.tsx  NotebookFlowDiagram.tsx  StatusBadge.tsx
style/: index.css  index.js
tests/: test_dashboard_last_run_status.py  test_db_health.py  test_environment.py  test_executor.py  test_last_run.py  test_routing_executor.py  test_scheduler.py  test_task_runner.py  test_yaml_jobs.py  test_yaml_to_env.py  test_yaml_watcher.py
